Fix alignment

--- a/style/section/speakers.styl
+++ b/style/section/speakers.styl
@@ -5,9 +5,9 @@
     ul.speakers-list
         debullet()
 
-        .col-3
-            float none
-            display inline-block
+        // .col-3
+        //     float none
+        //     display inline-block
 
         .row
             margin 50px 0
